Alles vorbereitet um die Daten einzupflegen

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script type="module" src="assets/js/components/tipping/typing-field.js"></script>
     <script type="module" src='assets/js/components/lit/task-card/task-card.mjs'></script>
     <script type="module" src="assets/js/components/lit/fileView/FileView.mjs" ></script>
+    <script type="module" src="assets/js/components/lit/embedBrowser/EmbedBrowser.mjs"></script>
+    <script type="module" src="assets/js/components/lit/TabView/TabViewer.mjs"></script>
 
 </head>
 <body>
@@ -27,7 +29,6 @@
         <header>
                 <img id="logo" src="assets/img/logo.svg" alt="WEM">
                 <ul id="main-menu">
-                    <li id="hide-menu">X</li>
                     <!-- Content will be inserted by the Content loader-->
                 </ul>
         </header>
