--- a/tasks/u1/index.html
+++ b/tasks/u1/index.html
@@ -1,4 +1,5 @@
 <h2>Die Geschichte des WWW</h2>
+
 <details class="question-box">
     <summary>Mit welchen fachlichen Argumenten wurde das WWW-Proposal von TBL abgelehnt?</summary>
     <p>Man hielt den Ansatz von TBL für einen Rückschritt, da durch seine Vorschläge "broken-links" entstehen konnten. Dieses Problem meinte man bereits gelöst zu haben. 
@@ -15,9 +16,59 @@
     <p>Zur Vermeidung von "broken-links" müsste ein zentrales Verzeichnis angelegt werden, in dem alle Ressourcen verwaltet werden. Neue Webseiten müssten sich bei diesem Verzeichnis anmelden und abgeschaffte Seiten müssten abgemeldet werden. Lösungen zur Löschweitergabe müssten implementiert werden, damit die referenzielle Integrität gewahrt werden kann.</p>
 </details>
 
-<figure>
-    <img src="/tasks/u1/tribute.png" alt="Error">
-    <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
-</figure>
+<h2>Aufgabe 1.3</h2>
 
-<file-viewer src="/tasks/u1/Abschnitt1.html">Index File</file-viewer>
+<example-tabs>
+    <example-tab title="Mockup">
+        <figure>
+            <img src="/tasks/u1/tribute.png" alt="Error">
+            <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
+        </figure>
+    </example-tab>
+
+    <example-tab title="Code">
+        <file-viewer src="/tasks/u1/Abschnitt1.html">Index File</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u1/Abschnitt1.html"></embed-browser>
+    </example-tab>
+  </example-tabs>
+
+  <h2>Aufgabe 1.4</h2>
+  
+  <example-tabs>
+    <example-tab title="Mockup">
+        <figure>
+            <img src="/tasks/u1/survey.png" alt="Error">
+            <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
+        </figure>
+    </example-tab>
+
+    <example-tab title="Code">
+        <file-viewer src="/tasks/u1/a4.html">Index File</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u1/a4.html"></embed-browser>
+    </example-tab>
+  </example-tabs>
+
+  <h2>Aufgabe 1.5</h2>
+
+  <example-tabs>
+    <example-tab title="Mockup">
+        <figure>
+            <img src="/tasks/u1/landing.png" alt="Error">
+            <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
+        </figure>
+    </example-tab>
+
+    <example-tab title="Code">
+        <file-viewer src="/tasks/u1/a5.html">Index File</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u1/a5.html"></embed-browser>
+    </example-tab>
+  </example-tabs>
