--- a/tasks/u2/a4.html
+++ b/tasks/u2/a4.html
@@ -89,7 +89,7 @@
 </header>
 <div id="content">
     <h1>You dont know JavaScript</h1>
-    <img src="https://kaul.inf.h-brs.de/wem/assets/img/landing-img.png" alt="Book Cover">
+    <img src="/tasks/u1/landing-img.png" alt="Book Cover">
     <p> Don't just drift through Javascript.<br>
         Understand how Javascript works<br>
         start your journey through the bumpy side of Javascript<br>
