--- a/tasks/u2/index.html
+++ b/tasks/u2/index.html
@@ -1,1 +1,75 @@
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolorum libero officiis molestiae accusantium obcaecati blanditiis repudiandae non quis cupiditate.
+<h2>Aufgabe 2.1 - Responsiv mit Flexbox Desktop-First</h2>
+<example-tabs>
+    <example-tab title="Mockup">
+        <figure>
+            <img src="/tasks/u2/holy-grail1.png" alt="Error">
+            <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
+        </figure>
+    </example-tab>
+
+    <example-tab title="Code">
+        <file-viewer src="/tasks/u2/a1.html">Index File</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u2/a1.html"></embed-browser>
+    </example-tab>
+  </example-tabs>
+
+<h2>Aufgabe 2.2 - Responsiv mit Grid Mobile-First</h2>
+<example-tabs>
+
+    <example-tab title="Code">
+        <file-viewer src="/tasks/u2/a2.html">Index File</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u2/a1.html"></embed-browser>
+    </example-tab>
+  </example-tabs>
+
+<h2>Aufgabe 2.3 - Holy Grail</h2>
+<example-tabs>
+    <example-tab title="Mockup">
+        <figure>
+            <img src="/tasks/u2/holy-grail2.png" alt="Error">
+            <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
+        </figure>
+    </example-tab>
+
+    <example-tab title="Code - Flex">
+        <file-viewer src="/tasks/u2/a3_1.html">Index File</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau - Flex">
+        <embed-browser src="/tasks/u2/a3_1.html"></embed-browser>
+    </example-tab>
+
+    <example-tab title="Code - Grid">
+        <file-viewer src="/tasks/u2/a3_2.html">Index File</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau - Grid">
+        <embed-browser src="/tasks/u2/a3_2.html"></embed-browser>
+    </example-tab>
+  </example-tabs>
+
+<h2>Aufgabe 2.4 - Responsiv mit Grid</h2>
+<example-tabs>
+<example-tab title="Mockup">
+    <figure>
+        <img src="/tasks/u1/landing.png" alt="Error">
+        <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
+    </figure>
+</example-tab>
+
+<example-tab title="Code">
+    <file-viewer src="/tasks/u2/a4.html">a4.html</file-viewer>
+</example-tab>
+
+<example-tab title="Vorschau">
+    <embed-browser src="/tasks/u2/a4.html"></embed-browser>
+</example-tab>
+</example-tabs>
+<h2>Aufgabe 2.5 - Integration in die eigene Webseite</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora magni dignissimos at quibusdam dolor quos quia, ab laborum atque quisquam.</p>
