Aufgaben eingepflegt und überarbeitet

--- a/tasks/u4/a1.html
+++ b/tasks/u4/a1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Einkaufsliste</title>
-    <script src="script4_1.js"></script>
+    <script src="a1.js"></script>
 </head>
 <body>
 <h1>Einkaufsliste</h1>
