--- a/tasks/u4/a2.html
+++ b/tasks/u4/a2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Rednerliste</title>
-    <script src="script4_2.js"></script>
+    <script src="a2.js"></script>
 </head>
 <body>
 <h1>Rednerliste</h1>
