--- a/tasks/u4/a3.html
+++ b/tasks/u4/a3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Tabellenkalkulation</title>
-    <script src="script4_3.js"></script>
+    <script src="a3.js"></script>
     <style>
         body{
             font-family: sans-serif;
