--- a/tasks/u4/index.html
+++ b/tasks/u4/index.html
@@ -1,1 +1,90 @@
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolorum libero officiis molestiae accusantium obcaecati blanditiis repudiandae non quis cupiditate.
+<h2>Aufgabe 4.1 - Einkaufsliste</h2>
+
+<example-tabs>
+    <example-tab title="Mockup">
+        <figure>
+            <img src="/tasks/u4/Einkaufsliste.png" alt="Error">
+            <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
+        </figure>
+    </example-tab>
+
+    <example-tab title="Code - a1.html">
+        <file-viewer src="/tasks/u4/a1.html">a1.html</file-viewer>
+    </example-tab>
+
+    <example-tab title="Code - a1.js">
+        <file-viewer src="/tasks/u4/a1.js">a1.js</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u4/a1.html"></embed-browser>
+    </example-tab>
+  </example-tabs>
+
+
+<h2>Aufgabe 4.2 - Rednerliste mit Zeitmessung</h2>
+
+<example-tabs>
+    <example-tab title="Mockup">
+        <figure>
+            <img src="/tasks/u4/Rednerliste.png" alt="Error">
+            <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
+        </figure>
+    </example-tab>
+
+    <example-tab title="Code - a2.html">
+        <file-viewer src="/tasks/u4/a2.html">a2.html</file-viewer>
+    </example-tab>
+
+    <example-tab title="Code - a2.js">
+        <file-viewer src="/tasks/u4/a2.js">a2.js</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u4/a2.html"></embed-browser>
+    </example-tab>
+  </example-tabs>
+
+
+<h2>Aufgabe 4.3 - Tabellenkalkulation mit den Bordmitteln des Webs</h2>
+<example-tabs>
+    <example-tab title="Mockup">
+        <figure>
+            <img src="/tasks/u4/excel_formel.png" alt="Error">
+            <figcaption>Abbildung 1.1: Mock-Up einer einfachen Webseite die nachgebaut werden sollte</figcaption>
+        </figure>
+    </example-tab>
+
+    <example-tab title="Code - a3.html">
+        <file-viewer src="/tasks/u4/a3.html">a3.html</file-viewer>
+    </example-tab>
+
+    <example-tab title="Code - a3.js">
+        <file-viewer src="/tasks/u4/a3.js">a3.js</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u4/a3.html"></embed-browser>
+    </example-tab>
+  </example-tabs>
+
+
+
+<h2>Aufgabe 4.4 - HTML-Editor</h2>
+<example-tabs>
+
+    <example-tab title="Code - a4.html">
+        <file-viewer src="/tasks/u4/a4.html">a4.html</file-viewer>
+    </example-tab>
+
+    <example-tab title="Code - a4.js">
+        <file-viewer src="/tasks/u4/a4.js">a4.js</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u4/a4.html"></embed-browser>
+    </example-tab>
+  </example-tabs>
+
+<h2>Aufgabe 4.5 - Integration in die eigene Webseite</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora magni dignissimos at quibusdam dolor quos quia, ab laborum atque quisquam.</p>
