--- a/tasks/u5/a3_2.html
+++ b/tasks/u5/a3_2.html
@@ -11,7 +11,7 @@
         window.addEventListener("load",()=>{
             pb = document.getElementById("pb");
             button = document.getElementById("button")
-            worker = new Worker("Aufgabe3_Worker.js");
+            worker = new Worker("a3.js");
             ul = document.getElementById("primes");
 
             button.addEventListener("click", ()=>{
