--- a/tasks/u5/index.html
+++ b/tasks/u5/index.html
@@ -1,1 +1,85 @@
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolorum libero officiis molestiae accusantium obcaecati blanditiis repudiandae non quis cupiditate.
+<h2>Aufgabe 5.1 - Promises</h2>
+    <example-tabs>
+        <example-tab title="Code - a1.html">
+            <file-viewer src="/tasks/u5/a1.html">a1.html</file-viewer>
+        </example-tab>
+
+        <example-tab title="Code - A.txt">
+            <file-viewer src="/tasks/u5/A.txt">A.txt</file-viewer>
+        </example-tab>
+
+        <example-tab title="Code - B.txt">
+            <file-viewer src="/tasks/u5/B.txt">A.txt</file-viewer>
+        </example-tab>
+
+        <example-tab title="Vorschau">
+            <embed-browser src="/tasks/u5/a1.html"></embed-browser>
+        </example-tab>
+    </example-tabs>
+
+
+<h2>Aufgabe 5.2 - async / await</h2>
+<example-tabs>
+    <example-tab title="Code - a2.html">
+        <file-viewer src="/tasks/u5/a2.html">a1.html</file-viewer>
+    </example-tab>
+
+    <example-tab title="Code - A.txt">
+        <file-viewer src="/tasks/u5/A.txt">A.txt</file-viewer>
+    </example-tab>
+
+    <example-tab title="Code - B.txt">
+        <file-viewer src="/tasks/u5/B.txt">A.txt</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u5/a2.html"></embed-browser>
+    </example-tab>
+</example-tabs>
+
+<h2>Aufgabe 5.3 - Web Worker</h2>
+<example-tabs>
+    <example-tab title="Code - Primzahlen ohne Webworker">
+        <file-viewer src="/tasks/u5/a3_1.html">a3_1.html</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau - ohne Webworker">
+        <embed-browser src="/tasks/u5/a3_1.html"></embed-browser>
+    </example-tab>
+
+    <example-tab title="Code - Primzahlen mit Web Worker">
+        <file-viewer src="/tasks/u5/a3_2.html">a3_2.html</file-viewer>
+    </example-tab>
+
+    <example-tab title="Code - Webworker">
+        <file-viewer src="/tasks/u5/a3.js">a3.js</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau - mit Webworker">
+        <embed-browser src="/tasks/u5/a3_2.html"></embed-browser>
+    </example-tab>
+</example-tabs>
+
+
+
+
+
+<h2>Aufgabe 5.4 - WWW-Navigator</h2>
+<example-tabs>
+    <example-tab title="Code - HTML">
+        <file-viewer src="/tasks/u5/a4.html">a4.html</file-viewer>
+    </example-tab>
+    <example-tab title="Code - JSON">
+        <file-viewer src="/tasks/u5/a4.json">a4.json</file-viewer>
+    </example-tab>
+    <example-tab title="Code - JS">
+        <file-viewer src="/tasks/u5/a4.js">a4.js</file-viewer>
+    </example-tab>
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u5/a4.html"></embed-browser>
+    </example-tab>
+</example-tabs>
+
+
+<h2>Aufgabe 5.5 - Integration in die eigene Webseite</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora magni dignissimos at quibusdam dolor quos quia, ab laborum atque quisquam.</p>
