--- a/tasks/u6/index.html
+++ b/tasks/u6/index.html
@@ -1,1 +1,43 @@
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique dolorum libero officiis molestiae accusantium obcaecati blanditiis repudiandae non quis cupiditate.
+<h2>Aufgabe 6.1 - Statistik-Balkendiagramm in SVG </h2>
+<example-tabs>
+    <example-tab title="HTML">
+        <file-viewer src="/tasks/u6/a1.html">a1.html</file-viewer>
+    </example-tab>
+
+    <example-tab title="JSON">
+        <file-viewer src="/tasks/u6/a1.json">a1.json</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u6/a1.html"></embed-browser>
+    </example-tab>
+
+</example-tabs>
+
+<h2>Aufgabe 6.2 - SVG Bezier-Animation</h2>
+<example-tabs>
+    <example-tab title="HTML">
+        <file-viewer src="/tasks/u6/a2.html">a2.html</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u6/a2.html"></embed-browser>
+    </example-tab>
+
+</example-tabs>
+
+<h2>Aufgabe 6.3 - Kalligraphie-Editor in SVG</h2>
+<example-tabs>
+    <example-tab title="HTML">
+        <file-viewer src="/tasks/u6/a3.html">a3.html</file-viewer>
+    </example-tab>
+
+    <example-tab title="Vorschau">
+        <embed-browser src="/tasks/u6/a3.html"></embed-browser>
+    </example-tab>
+
+</example-tabs>
+
+
+<h2>Aufgabe 6.4 - Integration in die eigene Webseite</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora magni dignissimos at quibusdam dolor quos quia, ab laborum atque quisquam.</p>
