--- a/tasks/u4/a4.html
+++ b/tasks/u4/a4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>WYSIWYG</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="script4_4.js"></script>
+    <script src="a4.js"></script>
     <style>
 
         :root {
