--- a/tasks/u5/a4.html
+++ b/tasks/u5/a4.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-   <script src="Aufgabe4.js"></script>
+   <script src="a4.js"></script>
     <style>
     :root{
         --primary_color: #0d4072;
