added info field

--- a/tasks/u2/index.html
+++ b/tasks/u2/index.html
@@ -1,5 +1,11 @@
 <h2>Aufgabe 2.1 - Responsiv mit Flexbox Desktop-First</h2>
 <example-tabs>
+    
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+
     <example-tab title="Mockup">
         <figure>
             <img src="/tasks/u2/holy-grail1.png" alt="Error">
@@ -19,6 +25,11 @@
 <h2>Aufgabe 2.2 - Responsiv mit Grid Mobile-First</h2>
 <example-tabs>
 
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+
     <example-tab title="Code">
         <file-viewer src="/tasks/u2/a2.html">Index File</file-viewer>
     </example-tab>
@@ -30,6 +41,12 @@
 
 <h2>Aufgabe 2.3 - Holy Grail</h2>
 <example-tabs>
+
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+
     <example-tab title="Mockup">
         <figure>
             <img src="/tasks/u2/holy-grail2.png" alt="Error">
@@ -56,6 +73,12 @@
 
 <h2>Aufgabe 2.4 - Responsiv mit Grid</h2>
 <example-tabs>
+
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+    
 <example-tab title="Mockup">
     <figure>
         <img src="/tasks/u1/landing.png" alt="Error">
