--- a/tasks/u4/index.html
+++ b/tasks/u4/index.html
@@ -1,6 +1,12 @@
 <h2>Aufgabe 4.1 - Einkaufsliste</h2>
 
 <example-tabs>
+
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+    
     <example-tab title="Mockup">
         <figure>
             <img src="/tasks/u4/Einkaufsliste.png" alt="Error">
@@ -25,6 +31,12 @@
 <h2>Aufgabe 4.2 - Rednerliste mit Zeitmessung</h2>
 
 <example-tabs>
+
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+    
     <example-tab title="Mockup">
         <figure>
             <img src="/tasks/u4/Rednerliste.png" alt="Error">
@@ -48,6 +60,12 @@
 
 <h2>Aufgabe 4.3 - Tabellenkalkulation mit den Bordmitteln des Webs</h2>
 <example-tabs>
+
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+
     <example-tab title="Mockup">
         <figure>
             <img src="/tasks/u4/excel_formel.png" alt="Error">
@@ -72,6 +90,11 @@
 
 <h2>Aufgabe 4.4 - HTML-Editor</h2>
 <example-tabs>
+
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
 
     <example-tab title="Code - a4.html">
         <file-viewer src="/tasks/u4/a4.html">a4.html</file-viewer>
