--- a/tasks/u5/index.html
+++ b/tasks/u5/index.html
@@ -1,5 +1,11 @@
 <h2>Aufgabe 5.1 - Promises</h2>
     <example-tabs>
+
+        <example-tab title="&#9432;">
+            <h3>Kleine nette Beschreibung</h3>
+            <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+        </example-tab>
+        
         <example-tab title="Code - a1.html">
             <file-viewer src="/tasks/u5/a1.html">a1.html</file-viewer>
         </example-tab>
@@ -20,6 +26,12 @@
 
 <h2>Aufgabe 5.2 - async / await</h2>
 <example-tabs>
+
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+
     <example-tab title="Code - a2.html">
         <file-viewer src="/tasks/u5/a2.html">a1.html</file-viewer>
     </example-tab>
@@ -39,6 +51,12 @@
 
 <h2>Aufgabe 5.3 - Web Worker</h2>
 <example-tabs>
+
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+    
     <example-tab title="Code - Primzahlen ohne Webworker">
         <file-viewer src="/tasks/u5/a3_1.html">a3_1.html</file-viewer>
     </example-tab>
@@ -62,10 +80,14 @@
 
 
 
-
-
 <h2>Aufgabe 5.4 - WWW-Navigator</h2>
 <example-tabs>
+
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+
     <example-tab title="Code - HTML">
         <file-viewer src="/tasks/u5/a4.html">a4.html</file-viewer>
     </example-tab>
