--- a/tasks/u1/index.html
+++ b/tasks/u1/index.html
@@ -48,6 +48,11 @@
 <h2>Aufgabe 1.3 - Wireframe with HTML and CSS: Tribute Page</h2>
 
 <example-tabs>
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+
     <example-tab title="Mockup">
         <figure>
             <img src="/tasks/u1/tribute.png" alt="Error">
@@ -67,6 +72,12 @@
   <h2>Aufgabe 1.4 - Wireframe with HTML and CSS (Survey Form)</h2>
   
   <example-tabs>
+
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+
     <example-tab title="Mockup">
         <figure>
             <img src="/tasks/u1/survey.png" alt="Error">
@@ -86,6 +97,11 @@
   <h2>Aufgabe 1.5 - Wireframe with HTML and CSS (Product Landing Page)</h2>
 
   <example-tabs>
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+    
     <example-tab title="Mockup">
         <figure>
             <img src="/tasks/u1/landing.png" alt="Error">
