--- a/tasks/u6/index.html
+++ b/tasks/u6/index.html
@@ -1,5 +1,9 @@
 <h2>Aufgabe 6.1 - Statistik-Balkendiagramm in SVG </h2>
 <example-tabs>
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
     <example-tab title="HTML">
         <file-viewer src="/tasks/u6/a1.html">a1.html</file-viewer>
     </example-tab>
@@ -16,6 +20,11 @@
 
 <h2>Aufgabe 6.2 - SVG Bezier-Animation</h2>
 <example-tabs>
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+
     <example-tab title="HTML">
         <file-viewer src="/tasks/u6/a2.html">a2.html</file-viewer>
     </example-tab>
@@ -28,6 +37,11 @@
 
 <h2>Aufgabe 6.3 - Kalligraphie-Editor in SVG</h2>
 <example-tabs>
+    <example-tab title="&#9432;">
+        <h3>Kleine nette Beschreibung</h3>
+        <p>In dieser Aufgabe sollte ein Balkendirgramm erstellt werden, welches die Sitzvertzeilung des aktuellen duetschen Bundestages wiederspiegelt.</p>
+    </example-tab>
+    
     <example-tab title="HTML">
         <file-viewer src="/tasks/u6/a3.html">a3.html</file-viewer>
     </example-tab>
